--- a/estilo.css
+++ b/estilo.css
@@ -4,3 +4,19 @@ body {
 h1 {
   text-align: center;
 }
+.caixa1 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: green;
+  left: 0;
+  bottom:0;
+}
+.caixa2 {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: yellow;
+  left: 205px;
+  bottom:0;
+}
