--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background: pink;
+  background: rgb(179, 210, 235)255, 235, 192);
 }
 h1 {
   text-align: center;
@@ -19,4 +19,11 @@ h1 {
   background: yellow;
   left: 205px;
   bottom:0;
+}
+.menuPrincipal {
+   position: absolute;
+   width: 100%;
+   height: 80px;
+   background:rgb(161, 246, 252);
+   font-family: 'Courier New', Courier, monospace;
 }
