--- a/estilo.css
+++ b/estilo.css
@@ -98,3 +98,14 @@ li a:hover {
   position: absolute;
   top: 45px;
 }
+.logoGastao {
+   position: absolute;
+   top: 0;
+   right: 0;
+   width: 80px;
+   z-index: 999;
+   background: coral;
+}
+#aguia {
+  width: 30%;
+}
