--- a/estilo.css
+++ b/estilo.css
@@ -1,111 +1,136 @@
-body {
-  background: rgb(179, 210, 235);
+body{
   margin: 0;
   padding: 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-h1 {
+h1{
   text-align: center;
 }
 .caixa1 {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: green;
-  left: 0;
-  bottom:0;
+   position: absolute;
+   background: rgb(99, 153, 28);
+   width: 100px;
+   height: 100px;
+   color: #FFFFFF;
+   right: 0;
+   top:0;
+   font-family: 'Courier New', Courier, monospace;
 }
 .caixa2 {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: yellow;
-  left: 205px;
-  bottom:0;
+   position: absolute;
+   background: blue;
+   width: 100px;
+   height: 100px;
+   color: #FFFFFF;
+   right: 0;
+   top:105px;
 }
+.caixa3 {
+   position: absolute;
+   background: rgb(99, 153, 28);
+   width: 100px;
+   height: 100px;
+   color: #FFFFFF;
+   right: 105px;
+   top: 0;
+   font-family: 'Courier New', Courier, monospace;
+}
+.caixa4 {
+   position: absolute;
+   background: blue;
+   width: 100px;
+   height: 100px;
+   color: #FFFFFF;
+   right: 105px;
+   top:105px;
+}
+.caixa5 {
+   position: absolute;
+   background: rgb(169, 169, 199);
+   width: 100px;
+   height: 100px;
+   color: #FFFFFF;
+   right:52px;
+   top: 52px;
+}
+
 .menuPrincipal {
    position: absolute;
    width: 100%;
    height: 45px;
-   background:rgb(161, 246, 252);
-   font-family: 'Courier New', Courier, monospace;
+   background: rgb(72, 99, 52);
    top: 0;
    left: 0;
+
 }
 nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: 0;
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: 0;
 }
 li {
-  float: left;
+   float: left;
 }
 li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+   display: block;
+   color: rgb(255, 255, 255);
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none; 
+   font-family: 'Courier New', Courier, monospace;
 }
 li a:hover {
-  background: rgb(139, 105, 201);
-  color: azure;
+   background: rgba(0, 0, 0, 0.349);
+   color: rgb(245, 7, 7);
 }
-#abelha {
-   width: 15%;
+#bomba {
+   width: 10%;
 }
-.caixaAbelha {
-  position: absolute;
-  top: 45px;
-  width: 90%;
-  height: 120px;
-  background: rgb(168, 195, 226);
-  left: 0;
-  margin: 20px;
-  border-color: blue;
-  border-style: solid;
-  border-width: 20px;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-}
-.caixaAbelha2 {
-  position: absolute;
-  top: 45px;
-  width: 90%;
-  height: 120px;
-  background: rgb(39, 172, 143);
-  left: 0;
-  margin: 20px;
-  border-color: rgb(140, 140, 182);
-  border-style: solid;
-  border-width: 20px;
-  padding: 20px;
-  display: flex;
-  justify-content: end;
-}
-.rodape {
+.boxBomba {
    position: absolute;
-   width: 100%;
-   height: 35px;
-   background: black;
-   color: blanchedalmond;
-   bottom: 0;
+   width: 90%;
+   height: 200px;
+   background: rgb(224, 9, 178);
+   top: 50px;
+   left: 0;
+   border-color: rgb(255, 255, 255);
+   border-width: 20px;
+   border-style: solid;
+   margin: 20px;
+   padding: 20px;
    display: flex;
    justify-content: center;
 }
-.conteudo {
-  position: absolute;
-  top: 45px;
+.rodape {
+   position: relative;
+   width: 100%;
+   display: flex;
+   justify-content: center;
 }
-.logoGastao {
+#copy {
+   position: relative;
+   bottom: 0;
+   border-radius: 30px;
+   background: black;
+   color: burlywood;
+   width: 80%;
+   height: 40px;
+   display: flex;
+   justify-content: center;
+   font-size: 18px;
+}
+.conteudo {
+   position:absolute;
+   top: 45px;
+   width: 96%;
+   padding: 5px;
+}
+.logoGastao{
    position: absolute;
+   width: 120px;
+   height: 100px;
    top: 0;
    right: 0;
-   width: 80px;
    z-index: 999;
-   background: coral;
-}
-#aguia {
-  width: 30%;
 }
